css/style.css
@import url('https://fonts.googleapis.com/css?family=Dosis');
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
html {
    height: 100%;
}

body {
    min-height: 100%;
    background-color: #212121;
    font-size: 1rem;
    font-family: 'Dosis', sans-serif;
    margin: 0;
    padding: 0;
}

ul.favorite-box,
ul.pallette-box {
    display: grid;
    grid-template-columns: 30px 30px 30px 30px;
    grid-row-gap: 12px;
}

ul.favorite-box {
    padding: 0;
    -webkit-padding-start: 0;
    list-style-type: none;
    overflow-y: scroll;
    white-space: nowrap;
    height: 20px;
}

ul.pallette-box {
    padding: 0;
    -webkit-padding-start: 0;
    list-style-type: none;
    overflow-y: scroll;
    white-space: nowrap;
    max-height: 450px;
}

ul.favorite-box li,
ul.pallette-box li {
    height: 20px;
    margin: 0 4px;
    border-radius: 2px;
    list-style-position: outside;
    border: .5px solid;
    border-color: rgba(255, 255, 255, .4);
    transition: border-color .3s;
}
ul.favorite-box li:hover,
ul.pallette-box li:hover {
    border-color: rgba(255, 255, 255, .8);
    transition: border-color .3s;
    cursor: pointer;
}

ul.favorite-box li:active,
ul.pallette-box li:active {
    border-color: rgba(255, 255, 255, 1);
    transition: border-color .3s;
    cursor: none;
}

li.pallette-color {
    grid-column: 1 1;
    background: #212121;
}

span.pallette-color-name {
    padding: 0 5px;
    grid-column-start: 2;
    grid-column-end: 4;
    font-size: .85em;
}

@media only screen and (max-width: 500px) {
    ul.favorite-box,
    ul.pallette-box {
        display: block;
        overflow-x: auto;
        white-space: nowrap;
        height: 80px;
    }
    ul.favorite-box li,
    ul.pallette-box li {
        display: inline-block;
        height: 40px;
        width: 40px;
        border-radius: 2px;
        list-style-position: outside;
        border: .5px solid;
        border-color: rgba(255, 255, 255, .4);
        transition: border-color .3s;
    }
}

div.pixel-area {
    display: inline-block;
    background: rgba(0, 0, 0, .7);
    overflow-y: scroll;
    height: 100%;
}

div.pixel {
    display: inline-block;
    opacity: .9;
    transition: opacity .2s;
    width: 100px;
    height: 100px;
    margin: 1px 2px;
    background-color: #fafafa;
    cursor: pointer;
}

div.pixel:hover{
    opacity: 1;
    transition: opacity .2s;
}
@media only screen and (max-width: 500px) {
    div.pixel {
        width: 50px;
        height: 50px;
        opacity: 1;
    }
}

div.settings-form {
    display: inline;
}

div.settings-form>* {
    font-family: 'Source Code Pro', monospace;
    font-size: .8em;
    padding: 0 10px;
}

div.settings-form>label {
    font-weight: 700;
    display: inline-block;
    max-width: 200px;
    min-width: 100px;
}

div.settings-form>input[type=number] {
    margin: 10px 0;
    height: 22px;
    max-width: 200px;
    padding: 5px 5px;
    text-align: center;
}


div.settings-form>input[type=range] {
    margin: 15px 0;
    -webkit-appearance: none;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

div.settings-form>input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background-color: #212121;
    transition: background-color .1s;
    
    cursor: pointer;
}

div.settings-form>input[type=range]::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background-color: #212121;
    transition: background-color .1s;

    cursor: pointer;
}

div.settings-form>input[type=range]::-webkit-slider-thumb:hover{
    background-color: #4CAF50;
    transition: background-color .1s;

}

div.settings-form>input[type=range]::-moz-range-thumb:hover {
    background-color: #4CAF50;
    transition: background-color .1s;

}




div.settings-form>button {
    display: inline-block;
    background-color: #757575;
    transition: background-color .1s;
    color: #fafafa;
    padding: 10px 30px;
    min-width: 130px;
    border: none;
    margin: 5px 0;
}

div.settings-form>button:hover {
    background-color: #4CAF50;
    transition: background-color .1s;
}

@media only screen and (max-width: 1464px) {
    div.settings-form {
        display: block;
    }
    div.settings-form>label {
        min-width: 150px;
    }

    div.settings-form>input[type=range] {
        height: 10px;
    }
}

@media only screen and (max-width: 500px) {
    div.settings-form {
        margin: 10px 0;
    }
    div.settings-form>input {
        display: inline;
    }
    div.settings-form>button {
        display: inline;
    }
}

div.header {
    color: #fafafa;
    background: #2196F3;
}

div.footer {
    color: #fafafa;
    text-align: center;
}

div.container {
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 12fr;
    grid-template-rows: 1fr 12fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}

div.grid {
    padding: 0 10px;
}

div.header {
    grid-column-start: 1;
    grid-column-end: 12;
    grid-row-start: 1;
    grid-row-end: 2;
}

div.sidebar {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 10;
    color: #fafafa;
    background: #607D8B;
}

div.content {
    grid-column-start: 2;
    grid-column-end: 12;
    grid-row-start: 2;
    grid-row-end: 9;
    background-color: #BBDEFB;
}

div.extra {
    grid-column-start: 2;
    grid-column-end: 12;
    grid-row-start: 9;
    grid-row-end: 10;
    background-color: #BBDEFB;
}

div.footer {
    grid-column-start: 1;
    grid-column-end: 12;
    grid-row-start: 10;
    grid-row-end: 12;
    background-color: #1976D2;
}

@media only screen and (max-width: 500px) {
    div.container {
        height: 100%;
        display: grid;
        grid-template-columns: 1fr 12fr;
        grid-template-rows: 50px 280px 2fr auto 50px;
    }
    div.header {
        grid-column-start: 1;
        grid-column-end: 12;
        grid-row-start: 1;
        grid-row-end: 2;
    }
    div.sidebar {
        grid-column-start: 1;
        grid-column-end: 12;
        grid-row-start: 2;
        grid-row-end: 3;
        color: #fafafa;
        background: #607D8B;
    }
    div.content {
        grid-column-start: 1;
        grid-column-end: 12;
        grid-row-start: 3;
        grid-row-end: 8;
        height: 600px;
    }
    div.extra {
        grid-column-start: 1;
        grid-column-end: 12;
        grid-row-start: 8;
        grid-row-end: 10;
    }
}

